# exercise

./: .gitignore  README.md
doggy/: Makefile.am  autogen.sh  compile.sh  configure.ac
doggy/man/: Makefile.am  doggy.1  doggy_parameters.conf.5  doggy_watcher.1
doggy/scripts/: Makefile.am  doggy_parameters.conf
doggy/src/: Makefile.am  doggy.c  doggy.h  doggy_process.c  doggy_process.h  doggy_watcher.c  doggy_watcher.h  doggy_watcher_constants.h  doggy_watcher_log.c  doggy_watcher_log.h  doggy_watcher_params.c  doggy_watcher_params.h
