CFLAGS = --pedantic -Wall -std=c99 -O2
LDFLAGS = -lm

bin_PROGRAMS = doggy doggy_watcher
doggy_SOURCES = doggy.c doggy.h doggy_wrapper_constants.h
doggy_LDADD = 
doggy_watcher_SOURCES = doggy_watcher.c doggy_watcher.h doggy_watcher_params.c doggy_watcher_params.h doggy_wrapper_constants.h
doggy_watcher_LDADD = 
